Spacing fix for new org page

--- a/src/app/new-organization/new-organization.component.scss
+++ b/src/app/new-organization/new-organization.component.scss
@@ -27,5 +27,5 @@ form {
 }
 
 button {
-  margin-top: 20px;
+  margin-top: 10px;
 }
